--- a/PHSX218 Electric Fields and Potentials.ipynb
+++ b/PHSX218 Electric Fields and Potentials.ipynb
@@ -17,10 +17,8 @@
     }
    ],
    "source": [
-    "#Physics 216\n",
-    "#Plotting code to use the whole year!\n",
-    "#Jaylene Naylor\n",
-    "#September 2015, modified Sept 2017, August 2018\n",
+    "#Physics 218 \n",
+    "#Joshua Soriano\n",
     "#-------------------------------------------#\n",
     "%matplotlib inline\n",
     "#Import packages and libraries needed and give them shortcut names\n",
